--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
-build/
-/tags
-/bazel-*
+#Binaries
+**/bin/
+bin-int/
+
+#Files
+
+
+#VS files and folder
+.vs/
+**.sln
+**.vcxproj
+**.vcxproj.filters
+**.vcxproj.user
